<!-- activity_control.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="landscape">
    <!-- HEADER start -->
    <ImageView
        android:id="@+id/battery_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/batteryIconContentDescription"
        android:labelFor="@+id/battery_text"
        android:src="@drawable/ic_battery_std_black_18dp" />

    <TextView
        android:id="@+id/battery_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/battery_icon"
        android:layout_toEndOf="@+id/battery_icon"
        android:layout_toRightOf="@+id/battery_icon"
        android:gravity="end"
        android:text="@string/battery_text"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/linkQuality_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/battery_icon"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_toEndOf="@+id/battery_text"
        android:layout_toRightOf="@+id/battery_text"
        android:contentDescription="@string/linkQualityIconContentDescription"
        android:labelFor="@+id/linkQuality_text"
        android:src="@drawable/ic_wifi_tethering_black_18dp" />

    <TextView
        android:id="@+id/linkQuality_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linkQuality_icon"
        android:layout_toEndOf="@+id/linkQuality_icon"
        android:layout_toRightOf="@+id/linkQuality_icon"
        android:gravity="end"
        android:text="@string/linkQuality_text"
        android:textAlignment="viewEnd"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <ImageButton
        android:id="@+id/imageButton_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@+id/imageButton_settings"
        android:layout_toLeftOf="@+id/imageButton_settings"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/menu_connect_ContentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_action_import_export" />

    <ImageButton
        android:id="@+id/imageButton_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/menu_preferences_ContentDescription"
        android:elevation="2dp"
        android:src="@drawable/ic_action_settings_light" />

    <!-- HEADER end -->

    <!-- 左侧油门摇杆 -->
    <com.yunjin.application.unit.JoystickView
        android:id="@+id/left_joystick"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"/>

    <!-- 右侧转向摇杆 -->
    <com.yunjin.application.unit.JoystickView
        android:id="@+id/right_joystick"
        android:layout_width="150dp"
        android:background="@drawable/ui_pic_joystick_right_pad"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>

    <!-- 中间信息显示区 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_toRightOf="@id/left_joystick"
        android:layout_toLeftOf="@id/right_joystick">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- 连接状态 -->
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="未连接"/>
            <ScrollView
                android:layout_margin="2dp"
                android:layout_height="24dp"
                android:layout_marginBottom="1px"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#131313">
                <TextView
                    android:background="#131313"
                    android:textColor="#FFFFFF"
                    android:scrollbars="vertical"
                    android:id="@+id/log_windows"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </ScrollView>

        </LinearLayout>

        <!-- 视频显示区域 -->

        <WebView
            android:id="@+id/webview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/connect_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:padding="4dp">

            <EditText
                android:id="@+id/ed_connect_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="地址"
                android:text="192.168.4.1"
                android:inputType="text"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/ed_connect_port_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="端口号"
                android:text="8088"
                android:inputType="number"
                android:maxLines="1"/>

            <Button
                android:id="@+id/bt_connect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="连接"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>